# glx_router

./: CMakeLists.txt  generate_proto.sh
client/: CMakeLists.txt  client.cpp
proto_generate/: hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h
proto_generate/proto/: hello.proto
server/: CMakeLists.txt  abstract.h  router.cpp  server.cpp  utils.h
server/grpc_server/: CMakeLists.txt  grpc_server.cpp  grpc_server.h  grpc_server_instance.cpp  grpc_server_instance.h
server/queue_manager/: queue_manager.h
server/tokenizer/: CMakeLists.txt  router_llama.py  test_tokenizer.cpp  tokenizer.cpp  tokenizer.h
single_test/: CMakeLists.txt  test_grpc.cpp  test_tokenizer.cpp
test/: CMakeLists.txt  npu_stream_test.cc
